[gd_scene load_steps=8 format=3 uid="uid://bukrwwxniru1s"]

[ext_resource type="Script" path="res://characters/enemies/shooter_enemy/shooter_enemy.gd" id="1_4e10h"]
[ext_resource type="PackedScene" uid="uid://3wc8io6rgt70" path="res://characters/base_components/HealthComponent.tscn" id="2_a1mtj"]
[ext_resource type="Texture2D" uid="uid://fj5yvljqsu3q" path="res://assets/player_model/simple/simple_3.png" id="3_foo30"]
[ext_resource type="PackedScene" uid="uid://7swef8ik41ff" path="res://characters/base_components/HurtboxComponent.tscn" id="4_d1ut1"]
[ext_resource type="PackedScene" path="res://wepons/shooting_wepons/enemy_gun.tscn" id="4_r2hwc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_j7wq0"]
radius = 21.0

[sub_resource type="CircleShape2D" id="CircleShape2D_wr0a5"]
radius = 384.012

[node name="shooter_enemy" type="CharacterBody2D"]
script = ExtResource("1_4e10h")

[node name="HealthComponent" parent="." instance=ExtResource("2_a1mtj")]
max_health = 50

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(3.8147e-06, 0)
scale = Vector2(0.183594, 0.18)
texture = ExtResource("3_foo30")

[node name="EnemyGun" parent="." instance=ExtResource("4_r2hwc")]
position = Vector2(1, 0)
scale = Vector2(0.3, 0.3)

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("4_d1ut1")]
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(1, -1)
shape = SubResource("CircleShape2D_j7wq0")

[node name="detection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection"]
shape = SubResource("CircleShape2D_wr0a5")

[connection signal="died" from="HealthComponent" to="." method="_on_health_component_died"]
[connection signal="health_changed" from="HealthComponent" to="." method="_on_health_component_health_changed"]
[connection signal="body_entered" from="detection" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="detection" to="." method="_on_area_2d_body_exited"]
